fixing video size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -116,7 +116,7 @@
     height: 100px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
 .display-6 {
     font-size: 1.2rem;
 }
@@ -131,7 +131,7 @@
 
 #mainVideo {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     overflow: hidden;
     filter: brightness(0.7);    
 }
